<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_server_type"
        android:entries="@array/pref_server_type_list_titles"
        android:entryValues="@array/pref_server_type_list_values"
        android:key="server_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_server_type" />

    <ListPreference
        android:defaultValue="@string/pref_default_machine_status_type"
        android:entries="@array/pref_machine_status_type_list_titles"
        android:entryValues="@array/pref_machine_status_type_list_values"
        android:key="machine_status_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_machine_status_type" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_idle_popup_time"
        android:inputType="number"
        android:key="idle_popup_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:maxLength="9"
        android:title="@string/pref_title_idle_popup_time"
        android:summary="@string/pref_summary_idle_popup_time"
        />

</PreferenceScreen>
