<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_modbus_server_url"
        android:inputType="text"
        android:key="modbus_server_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_modbus_server_url" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_modbus_machine_status_tag"
        android:inputType="text"
        android:key="modbus_machine_status_tag"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_modbus_machine_status_tag" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_modbus_reason_code_tag"
        android:inputType="text"
        android:key="modbus_reason_code_tag"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_modbus_reason_code_tag" />

</PreferenceScreen>
