<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="io.datonis.aliothmi.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="io.datonis.aliothmi.SettingsActivity$OpcUaPreferenceFragment"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/pref_header_opc_ua" />

    <header
        android:fragment="io.datonis.aliothmi.SettingsActivity$OpcDaPreferenceFragment"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/pref_header_opc_da" />

    <header
        android:fragment="io.datonis.aliothmi.SettingsActivity$ModbusPreferenceFragment"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/pref_header_modbus" />


    <header
        android:fragment="io.datonis.aliothmi.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="io.datonis.aliothmi.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
